# agentsys

./: pyproject.toml  setup.cfg
agentsys/agents/: __init__.py  base.py
agentsys/config/: __init__.py  settings.py
agentsys/models/: __init__.py  base.py  openai_model.py
agentsys/orchestration/: __init__.py  swarm.py  tool_handler.py
agentsys/repl/: __init__.py  agent_repl.py  repl.py
examples/: simple_agent.py
examples/agents/: __init__.py  calculator.py  greeter.py
