[metadata]
name = agentsys
version = 0.1.0
author = lifsys
description = An educational multi-agent orchestration framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    openai>=1.0.0
    pydantic>=2.0.0
    locksys>=0.1.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
